// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Points [common] example testing should match snapshot(s) for basic 1`] = `
<g
  className="lucid-Points"
>
  <Point
    color="color-chart-0"
    hasStroke={true}
    key="00"
    kind={0}
    scale={1}
    x={0}
    y={162.85714285714286}
  />
  <Point
    color="color-chart-0"
    hasStroke={true}
    key="10"
    kind={0}
    scale={1}
    x={163.33333333333334}
    y={217.14285714285714}
  />
  <Point
    color="color-chart-0"
    hasStroke={true}
    key="20"
    kind={0}
    scale={1}
    x={326.6666666666667}
    y={271.42857142857144}
  />
  <Point
    color="color-chart-0"
    hasStroke={true}
    key="30"
    kind={0}
    scale={1}
    x={490}
    y={325.7142857142857}
  />
  <Point
    color="color-chart-0"
    hasStroke={true}
    key="40"
    kind={0}
    scale={1}
    x={653.3333333333334}
    y={271.42857142857144}
  />
  <Point
    color="color-chart-0"
    hasStroke={true}
    key="50"
    kind={0}
    scale={1}
    x={816.6666666666667}
    y={217.14285714285714}
  />
  <Point
    color="color-chart-0"
    hasStroke={true}
    key="60"
    kind={0}
    scale={1}
    x={980}
    y={162.85714285714286}
  />
  <Point
    color="color-chart-1"
    hasStroke={true}
    key="01"
    kind={1}
    scale={1}
    x={0}
    y={108.57142857142856}
  />
  <Point
    color="color-chart-1"
    hasStroke={true}
    key="11"
    kind={1}
    scale={1}
    x={163.33333333333334}
    y={162.85714285714286}
  />
  <Point
    color="color-chart-1"
    hasStroke={true}
    key="21"
    kind={1}
    scale={1}
    x={326.6666666666667}
    y={217.14285714285714}
  />
  <Point
    color="color-chart-1"
    hasStroke={true}
    key="31"
    kind={1}
    scale={1}
    x={490}
    y={271.42857142857144}
  />
  <Point
    color="color-chart-1"
    hasStroke={true}
    key="41"
    kind={1}
    scale={1}
    x={653.3333333333334}
    y={217.14285714285714}
  />
  <Point
    color="color-chart-1"
    hasStroke={true}
    key="51"
    kind={1}
    scale={1}
    x={816.6666666666667}
    y={162.85714285714286}
  />
  <Point
    color="color-chart-1"
    hasStroke={true}
    key="61"
    kind={1}
    scale={1}
    x={980}
    y={108.57142857142856}
  />
  <Point
    color="color-chart-2"
    hasStroke={true}
    key="02"
    kind={2}
    scale={1}
    x={0}
    y={54.28571428571428}
  />
  <Point
    color="color-chart-2"
    hasStroke={true}
    key="12"
    kind={2}
    scale={1}
    x={163.33333333333334}
    y={108.57142857142856}
  />
  <Point
    color="color-chart-2"
    hasStroke={true}
    key="22"
    kind={2}
    scale={1}
    x={326.6666666666667}
    y={162.85714285714286}
  />
  <Point
    color="color-chart-2"
    hasStroke={true}
    key="32"
    kind={2}
    scale={1}
    x={490}
    y={217.14285714285714}
  />
  <Point
    color="color-chart-2"
    hasStroke={true}
    key="42"
    kind={2}
    scale={1}
    x={653.3333333333334}
    y={162.85714285714286}
  />
  <Point
    color="color-chart-2"
    hasStroke={true}
    key="52"
    kind={2}
    scale={1}
    x={816.6666666666667}
    y={108.57142857142856}
  />
  <Point
    color="color-chart-2"
    hasStroke={true}
    key="62"
    kind={2}
    scale={1}
    x={980}
    y={54.28571428571428}
  />
  <Point
    color="color-chart-3"
    hasStroke={true}
    key="03"
    kind={3}
    scale={1}
    x={0}
    y={0}
  />
  <Point
    color="color-chart-3"
    hasStroke={true}
    key="13"
    kind={3}
    scale={1}
    x={163.33333333333334}
    y={54.28571428571428}
  />
  <Point
    color="color-chart-3"
    hasStroke={true}
    key="23"
    kind={3}
    scale={1}
    x={326.6666666666667}
    y={108.57142857142856}
  />
  <Point
    color="color-chart-3"
    hasStroke={true}
    key="33"
    kind={3}
    scale={1}
    x={490}
    y={162.85714285714286}
  />
  <Point
    color="color-chart-3"
    hasStroke={true}
    key="43"
    kind={3}
    scale={1}
    x={653.3333333333334}
    y={108.57142857142856}
  />
  <Point
    color="color-chart-3"
    hasStroke={true}
    key="53"
    kind={3}
    scale={1}
    x={816.6666666666667}
    y={54.28571428571428}
  />
  <Point
    color="color-chart-3"
    hasStroke={true}
    key="63"
    kind={3}
    scale={1}
    x={980}
    y={0}
  />
</g>
`;

exports[`Points [common] example testing should match snapshot(s) for custom-colors 1`] = `
<g
  className="lucid-Points"
>
  <Point
    color="color-chart-bad"
    hasStroke={true}
    key="00"
    kind={0}
    scale={1}
    x={0}
    y={162.85714285714286}
  />
  <Point
    color="color-chart-bad"
    hasStroke={true}
    key="10"
    kind={0}
    scale={1}
    x={163.33333333333334}
    y={217.14285714285714}
  />
  <Point
    color="color-chart-bad"
    hasStroke={true}
    key="20"
    kind={0}
    scale={1}
    x={326.6666666666667}
    y={271.42857142857144}
  />
  <Point
    color="color-chart-bad"
    hasStroke={true}
    key="30"
    kind={0}
    scale={1}
    x={490}
    y={325.7142857142857}
  />
  <Point
    color="color-chart-bad"
    hasStroke={true}
    key="40"
    kind={0}
    scale={1}
    x={653.3333333333334}
    y={271.42857142857144}
  />
  <Point
    color="color-chart-bad"
    hasStroke={true}
    key="50"
    kind={0}
    scale={1}
    x={816.6666666666667}
    y={217.14285714285714}
  />
  <Point
    color="color-chart-bad"
    hasStroke={true}
    key="60"
    kind={0}
    scale={1}
    x={980}
    y={162.85714285714286}
  />
  <Point
    color="color-chart-good"
    hasStroke={true}
    key="01"
    kind={1}
    scale={1}
    x={0}
    y={108.57142857142856}
  />
  <Point
    color="color-chart-good"
    hasStroke={true}
    key="11"
    kind={1}
    scale={1}
    x={163.33333333333334}
    y={162.85714285714286}
  />
  <Point
    color="color-chart-good"
    hasStroke={true}
    key="21"
    kind={1}
    scale={1}
    x={326.6666666666667}
    y={217.14285714285714}
  />
  <Point
    color="color-chart-good"
    hasStroke={true}
    key="31"
    kind={1}
    scale={1}
    x={490}
    y={271.42857142857144}
  />
  <Point
    color="color-chart-good"
    hasStroke={true}
    key="41"
    kind={1}
    scale={1}
    x={653.3333333333334}
    y={217.14285714285714}
  />
  <Point
    color="color-chart-good"
    hasStroke={true}
    key="51"
    kind={1}
    scale={1}
    x={816.6666666666667}
    y={162.85714285714286}
  />
  <Point
    color="color-chart-good"
    hasStroke={true}
    key="61"
    kind={1}
    scale={1}
    x={980}
    y={108.57142857142856}
  />
  <Point
    color="#ff8800"
    hasStroke={true}
    key="02"
    kind={2}
    scale={1}
    x={0}
    y={54.28571428571428}
  />
  <Point
    color="#ff8800"
    hasStroke={true}
    key="12"
    kind={2}
    scale={1}
    x={163.33333333333334}
    y={108.57142857142856}
  />
  <Point
    color="#ff8800"
    hasStroke={true}
    key="22"
    kind={2}
    scale={1}
    x={326.6666666666667}
    y={162.85714285714286}
  />
  <Point
    color="#ff8800"
    hasStroke={true}
    key="32"
    kind={2}
    scale={1}
    x={490}
    y={217.14285714285714}
  />
  <Point
    color="#ff8800"
    hasStroke={true}
    key="42"
    kind={2}
    scale={1}
    x={653.3333333333334}
    y={162.85714285714286}
  />
  <Point
    color="#ff8800"
    hasStroke={true}
    key="52"
    kind={2}
    scale={1}
    x={816.6666666666667}
    y={108.57142857142856}
  />
  <Point
    color="#ff8800"
    hasStroke={true}
    key="62"
    kind={2}
    scale={1}
    x={980}
    y={54.28571428571428}
  />
  <Point
    color="#abc123"
    hasStroke={true}
    key="03"
    kind={3}
    scale={1}
    x={0}
    y={0}
  />
  <Point
    color="#abc123"
    hasStroke={true}
    key="13"
    kind={3}
    scale={1}
    x={163.33333333333334}
    y={54.28571428571428}
  />
  <Point
    color="#abc123"
    hasStroke={true}
    key="23"
    kind={3}
    scale={1}
    x={326.6666666666667}
    y={108.57142857142856}
  />
  <Point
    color="#abc123"
    hasStroke={true}
    key="33"
    kind={3}
    scale={1}
    x={490}
    y={162.85714285714286}
  />
  <Point
    color="#abc123"
    hasStroke={true}
    key="43"
    kind={3}
    scale={1}
    x={653.3333333333334}
    y={108.57142857142856}
  />
  <Point
    color="#abc123"
    hasStroke={true}
    key="53"
    kind={3}
    scale={1}
    x={816.6666666666667}
    y={54.28571428571428}
  />
  <Point
    color="#abc123"
    hasStroke={true}
    key="63"
    kind={3}
    scale={1}
    x={980}
    y={0}
  />
</g>
`;
